Complete Them Bai Dang function

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ HELP.md
 target/
 mvnw
 *.cmd
+application.properties
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
