--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-HELP.md
+	HELP.md
 target/
 mvnw
 *.cmd
-application.properties
+*.properties
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
