--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8083
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/dasuo?characterEncoding=UTF-8
 spring.datasource.username = root
-spring.datasource.password = hoailinh9966
+spring.datasource.password = 123456
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.hibernate.ddl-auto= create-drop
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
@@ -14,3 +14,4 @@ spring.mail.username: phanvanluong2519999@gmail.com
 spring.mail.password: 250799Se
 spring.mail.properties.mail.smtp.auth: true
 spring.mail.properties.mail.smtp.starttls.enable: true
+spring.servlet.multipart.max-file-size: 20MB
